--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
      <!--give bootstrap classes 
      "col-lg-6 col-md-6 col-sm-6 col-xs-12" below with contact_2-->
-    <div class="contact_2 ">
+    <div class="contact_2 col-lg-6 col-md-6 col-sm-6 col-xs-12 ">
             <form>
                 <span>Name : </span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="name" required>
                 <br><br>
