--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <span class="icon-bar"></span>                        
       </button>
         <!-- Enter your name between the anchor tags-->
-      <a class="navbar-brand" href="#"> Peter pot </a>
+      <a class="navbar-brand" href="#"> Peter Pot </a>
     </div>
     
     <div class="collapse navbar-collapse" id="myNavbar">
@@ -63,7 +63,7 @@
         </div>
      <!--give bootstrap classes 
      "col-lg-6 col-md-6 col-sm-6 col-xs-12" below with contact_2-->
-    <div class="contact_2 col-lg-6 col-md-6 col-sm-6 col-xs-12 ">
+    <div class="contact_2 col-lg-6 col-md-6 col-sm-6 col-xs-12">
             <form>
                 <span>Name : </span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="name" required>
                 <br><br>
